traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:1: error: not found: value h
h = getMondeHauteur()
^TraversalByColumn:2: error: not found: value l
l = getMondeLargeur()
^TraversalByColumn:5: error: not found: value l
  for (i<- 0 to l-1)
                ^TraversalByColumn:7: error: not found: value h
    for (j<- 0 to h-1)
                  ^